[project]
name = "blog-generation"
version = "0.1.0"
description = "Blog generation Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.0",
    "uvicorn>=0.47.0",
    "watchdog>=6.0.0",
]
